--- a/package.json
+++ b/package.json
@@ -27,8 +27,5 @@
   "bugs": {
     "url": "https://github.com/isaacmsl/suap-api-wrapper/issues"
   },
-  "homepage": "https://github.com/isaacmsl/suap-api-wrapper",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  }
+  "homepage": "https://github.com/isaacmsl/suap-api-wrapper"
 }
