--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/isaacmsl/suapi",
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "jest": "^26.6.1",
     "ts-jest": "^26.4.3",
