--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suapi",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Wrapper para acesso a API do SUAP versão 2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/isaacmsl/suapi",
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "jest": "^26.6.1",
     "ts-jest": "^26.4.3",
